# foris-controller-openvpn-module

./: .gitignore  .gitlab-ci.yml  .gitmodules  CHANGELOG.md  CHANGELOG.rst  README.rst  pyproject.toml  setup.cfg  setup.py  tox.ini
foris_controller_backends/openvpn/: __init__.py
foris_controller_modules/openvpn/: __init__.py
foris_controller_modules/openvpn/handlers/: __init__.py  mock.py  openwrt.py
foris_controller_modules/openvpn/schema/: openvpn.json
foris_controller_openvpn_module/: __init__.py
tests/: __init__.py  conftest.py  test_openvpn.py
tests/test_files/etc/ssl/ca/openvpn/: 03.crt  03.key  ca.crt
tests/ubus-acl/: openvpn.json
tests/uci_configs/: network
