[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "foris-controller-openvpn-module"
dynamic = ["version"]
description = "Openvpn module for foris-controller"
readme = "README.rst"
license = { "file" = "LICENSE" }
authors = [
    { name = "CZ.NIC, z.s.p.o. (https://www.nic.cz/)", email = "packaging@turris.cz" },
]
dependencies = [
    "foris-controller",
]

[project.optional-dependencies]
mqtt = [
    "paho-mqtt",
]
tests = [
    "pytest",
    "ubus",
    "paho-mqtt",
    "foris-client",
    "foris-controller-testtools",
]
ubus = [
    "ubus",
]

[project.entry-points.lan_range_changed]
openvpn_reload_settings = "foris_controller_backends.openvpn.__init__:OpenvpnUci.reload_settings"

[tool.hatch.version]
path = "foris_controller_openvpn_module/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/foris_controller_modules",
    "/foris_controller_backends",
    "/foris_controller_openvpn_module",
]

[tool.hatch.build.targets.wheel]
include = [
    "/foris_controller_modules",
    "/foris_controller_backends",
    "/foris_controller_openvpn_module",
]
